# tyuiu-admission-project

./: .gitignore  .gitmodules  docker-compose.yml
chatbot/: Dockerfile  main.py  pyproject.toml  requirements.txt
chatbot/data/Приёмная компания 2026/Индивидуальные достижения/: Поступающим_бакалавриата.md
chatbot/data/Приёмная компания 2026/Приём документов/: Приём_документов.md
chatbot/scripts/: init_kb.py
chatbot/src/: agent.py  prompts.py  rag.py  settings.py
classifier/: Dockerfile  main.py  pyproject.toml  requirements.txt
rec-sys/: Dockerfile  main.py  pyproject.toml  requirements.txt
rec-sys/data/: Маппинг_направлений_подготовки.json
telegram-bot/: main.py  pyproject.toml  requirements.txt
telegram-bot/src/: db.py  handlers.py  keyboards.py  settings.py
